...
              padding: const EdgeInsets.all(25),
              child: Form(
                key: _formKey,
                child: Column(
                  children: [
                    TextFormField(
                      key: const ValueKey('email_field'),
                      onSaved: (value) {
                        _enteredMail = value ?? '';
                      },
                      validator: (value) {
                        if (value == null || value.isEmpty) {
                          return 'Please enter an email';
...
                        ),
                        label: const Text('Email'),
                      ),
                    ),
                    addVerticalSpace(25),
                    TextFormField(
                      key: const ValueKey('password_field'),
                      onSaved: (value) {
                        _enteredPassword = value ?? "";
                      },
                      validator: (value) {
                        if (value == null || value.isEmpty) {
                          return 'Please enter a password';
...
                      ),
                      obscureText: true,
                    ),
                    addVerticalSpace(35),
                    Center(
                        child: ElevatedButton(
                      key: const ValueKey('submit_button'),
                      onPressed: signInWithEmailAndPassword,
                      child: const Text('Log In'),
                    ))
                  ],
                ),
              ),
...
