...
                  ],
                ),
                addVerticalSpace(30),
                SizedBox(
                  width: 300,
                  child: ElevatedButton(
                    key: const ValueKey('login_button'),
                    onPressed: () {
                      Navigator.of(context).pushNamed('/login');
                    },
                    style: ElevatedButton.styleFrom(
                      padding: const EdgeInsets.symmetric(
                          horizontal: 50, vertical: 20),
...
